c4prj2_input/grade.txt
Grading at Sat Aug 10 15:59:15 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:27:31: error: too few arguments to function ‘strtoul’
           add_future_card(fc, strtoul(num), add_empty_card(tmp));
                               ^
In file included from deck.h:3:0,
                 from input.h:4,
                 from input.c:3:
/usr/include/stdlib.h:187:26: note: declared here
 extern unsigned long int strtoul (const char *__restrict __nptr,
                          ^
Compilation of input.c failed

Overall Grade: F
